--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,13 @@
 
     <groupId>org.example</groupId>
     <artifactId>test_task</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>InsuranceCalculationFunction</module>
+        <module>ModulePeople</module>
+        <module>ModuleCar</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
