--- a/InsuranceCalculationFunction/pom.xml
+++ b/InsuranceCalculationFunction/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>module-car</artifactId>
+            <artifactId>ModuleCar</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
