--- a/ModuleCar/pom.xml
+++ b/ModuleCar/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>module-car</artifactId>
+    <artifactId>ModuleCar</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -23,4 +23,5 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 </project>
