--- a/ModulePeople/pom.xml
+++ b/ModulePeople/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>module-people</artifactId>
+    <artifactId>ModulePeople</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
