--- a/ModuleCar/pom.xml
+++ b/ModuleCar/pom.xml
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>module-people</artifactId>
+            <artifactId>ModulePeople</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
